--- a/06-demo-application/client-react/index.html
+++ b/06-demo-application/client-react/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevOps Directive Docker Course</title>
+    <title>DevOps Directive Kubernetes Course</title>
   </head>
   <body>
     <div id="root"></div>
